更新票券到期時間顯示方式

--- a/4.5-asset-super_point.html
+++ b/4.5-asset-super_point.html
@@ -32,9 +32,9 @@
           <div class="img detail-theme-img"><img src="./img/detail/detail-img.png"></div>
           <div class="p-md">
             <h2 class="Title">赤鬼牛排台中本店 95 折優惠券</h2>
-            <p class="detail-caption mb-md">
+            <p class="detail-caption mb-md text-warning">
               <span class="material-icons">schedule</span>
-              2021/01/13 18:00 - 2021/12/31 23:59
+              2022/12/30 23:33:56 到期
             </p>
             <template v-if="!isQRcodeOpen">
               <!-- 領取票券的方式 -->
