--- a/4.5-asset-super_point.html
+++ b/4.5-asset-super_point.html
@@ -73,9 +73,10 @@
               <!-- 代碼核銷 的方式 -->
               <div class="caption1-M pb-xxs pt-md">輸入核銷代碼</div>
               <div class="input-wrap mb-sm">
-                <input class="input" id="pin" type="text" placeholder="請輸入代碼">
+                <input style="width: 200px;" class="input" id="pin" type="text" placeholder="請輸入代碼">
                 <button class="btn-copy" @click="usePin"> <span class="text-dark btn-text">確認核銷</span></button>
               </div>
+              <input class="input" id="pin" type="text" placeholder="請輸入代碼">
               <!-- 點確認核銷 的方式 -->
               <div class="alert alert-disabled">
                 <div class="img" data-ratio="1" data-size="sm"> <img src="./img/icon/ic-ok-mediumgray.png" alt=""></div>
