--- a/4.5-asset-super_point.html
+++ b/4.5-asset-super_point.html
@@ -73,9 +73,8 @@
               <!-- 代碼核銷 的方式 -->
               <div class="caption1-M pb-xxs pt-md">輸入核銷代碼</div>
               <div class="input-wrap mb-sm">
-                <input class="input pr-xs" style="flex: calc(100% - 48px);" id="pin" type="text" placeholder="請輸入代碼">
-                <button class="btn-copy" style="flex: 48px;" @click="usePin"> <span
-                    class="text-dark btn-text">確認核銷</span></button>
+                <input class="input" id="pin" type="text" placeholder="請輸入代碼">
+                <button class="btn-copy" @click="usePin"> <span class="text-dark btn-text">確認核銷</span></button>
               </div>
               <!-- 點確認核銷 的方式 -->
               <div class="alert alert-disabled">
