配合RD套件調整條碼class

--- a/4.5-asset-super_point.html
+++ b/4.5-asset-super_point.html
@@ -51,11 +51,11 @@
               </div>
               <!-- 掃描 barcode 的方式 -->
               <div class="po-r pb-md">
-                <div class="img d-block t-c mb-md h-60" data-fancybox data-src="#openBarcode">
-                  <img class="h-full" src="./img/barcode-s.png">
+                <div class="img d-block t-c mb-md h-100" data-fancybox data-src="#openBarcode">
+                  <img class="vue-barcode-element" src="./img/barcode-s.png">
                 </div>
-                <div class="img d-block t-c mb-md h-60" data-fancybox data-src="#openBarcode">
-                  <img class="h-full" src="./img/barcode-l.png">
+                <div class="img d-block t-c mb-md h-100" data-fancybox data-src="#openBarcode">
+                  <img class="vue-barcode-element" src="./img/barcode-l.png">
                 </div>
                 <button class="btn-reset po-a bottom right"><img data-fancybox data-src="#openBarcode"
                     src="img/icon/ic-zoom.svg"></button>
@@ -161,10 +161,10 @@
         <div class="dialog h-90vh po-r" id="openBarcode" style="display: none;">
           <div class="po-a w-55vh top50 left50 t-tc-r90">
             <div class="img d-block t-c mb-md h-90" data-fancybox data-src="#openBarcode">
-              <img class="h-full" src="./img/barcode-s.png">
+              <img class="vue-barcode-element" src="./img/barcode-s.png">
             </div>
             <div class="img d-block t-c mb-md h-90" data-fancybox data-src="#openBarcode">
-              <img class="h-full" src="./img/barcode-l.png">
+              <img class="vue-barcode-element" src="./img/barcode-l.png">
             </div>
           </div>
       </template>
